# lb2dgeom

./: .gitignore  AGENTS.md  INSTALL.md  README.md  environment.yml  pyproject.toml  setup.cfg
examples/: demo_boolean_ops.py  demo_cassini.py  demo_cassini_target_area.py  demo_cassini_threshold_maps.py  demo_ellipse.py
src/: sitecustomize.py
src/lb2dgeom/: __init__.py  bouzidi.py  d2q9.py  grids.py  io.py  raster.py  viz.py
src/lb2dgeom.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/lb2dgeom/shapes/: __init__.py  base.py  cassini_oval.py  circle.py  ellipse.py  ops.py  rectangle.py  rounded_rect.py
src/lb2dgeom/special_shapes/: __init__.py  cassini_target_area.py
tests/: conftest.py  test_cell_types.py  test_io.py  test_raster_bouzidi.py  test_shapes.py  test_special_shapes.py  test_txt_export.py  test_viz.py
