[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lb2dgeom"
version = "0.1.0"
description = "Analytic 2D geometry + Bouzidi q_i for D2Q9 LBM (local install)"
requires-python = ">=3.9"
dependencies = ["numpy>=1.23", "matplotlib>=3.7"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
